# Logic-of-Behaviour-in-Uncertain-Contexts

./: .atom-build.yaml  .dockerignore  .env  .gitignore  .pyflow.py  Benchmark cython detect_roots2.ipynb  Benchmark cython detect_roots3.ipynb  BondLogicCombo.ipynb  Dockerfile  DockerfileDevelop  DockerfileToolbox  Dynamical systems Sage 2.ipynb  Enzyme contexts.ipynb  Flowstar wrapper tests 2.ipynb  Flowstar wrapper tests.ipynb  Introduction.ipynb  Metabolic oscillator.ipynb  Monitoring 2.ipynb  Monitoring flowstar.ipynb  NonPolynomialReachability - Tentative Preconditioning issues.ipynb  NonPolynomialReachability-Copy1.ipynb  NonPolynomialReachability.ipynb  Reach test examples.ipynb  Repressilators QE cdf.cdf  Review meeting slides 2.ipynb  Review meeting slides 2.slides.html  Review meeting slides.slides.html  Semantics multiplication issues fixed using formal power series.ipynb  Sensitivity analysis.ipynb  Test root finding.ipynb  ULBC context tests.ipynb  ULBC masks root bug.ipynb  ULBC masks.ipynb  ULBC.ipynb  ULBC.py  ULBC2 MPFR.ipynb  ULBC2.ipynb  ULBC3.ipynb  Untitled10.ipynb  Untitled3.ipynb  (+45 more)
flowstar/: .buildconfig  CMakeLists.txt  Continuous.pxd  Hybrid.pxd  HybridProblem.pxd  Interval.pxd  Monomial.pxd  Monomial.pyx  Polynomial.pxd  TaylorModel.pxd  cppstd.pxd  flowinttests.cpp  flowinttests.pyx  flowroots.cpp  flowroots.pyx  flowstar-2.1.0  flowtest-old.pyx  flowtest.cpp  flowtest.pyx  global_manager.pxd  global_manager.pyx  includeh.pxd  instrumentation.pxd  instrumentation.pyx  interval.cpp  interval.h  interval.pxd  interval.pyx  interval_signals.py  (+33 more)
(+840 files in other folders)
